--- a/configs/06/custom-metrics-autoscaler-operator.yaml
+++ b/configs/06/custom-metrics-autoscaler-operator.yaml
@@ -3,25 +3,25 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
-    openshift.io/display-name: "Red Hat OpenShift Serverless"
+    openshift.io/display-name: "OpenShift Custom Metrics Autoscaler Operator"
   labels:
     openshift.io/cluster-monitoring: 'true'
-  name: openshift-serverless
+  name: openshift-keda
 ---
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
-  name: serverless-operator
-  namespace: openshift-serverless
-spec: {}
+  name: openshift-custom-metrics-autoscaler-operator
+  namespace: openshift-keda
 ---
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: serverless-operator
-  namespace: openshift-serverless
+  name: openshift-custom-metrics-autoscaler-operator
+  namespace: openshift-keda
 spec:
   channel: stable
-  name: serverless-operator
+  name: openshift-custom-metrics-autoscaler-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
+  installPlanApproval: Automatic
